# os-course-design

./: .gitignore
char-device/: CMakeLists.txt  Makefile  char_device.c  device_test.c  my_device.c
my-cp/: main.c
process-demo/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  process-demo.pro  pv.cpp  pv.h
process-monitor/cmd/: cmd-process-monitor  main.c
process-monitor/ui/process-monitor/: CMakeLists.txt  TaskInfo.h  killdialog.cpp  killdialog.h  killdialog.ui  main.cpp  maintab.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memdialog.cpp  memdialog.h  memdialog.ui  nicedialog.cpp  nicedialog.h  nicedialog.ui  rundialog.cpp  rundialog.h  utils.cpp  utils.h
syscall-pv/: PV.h  README.md
syscall-pv/linux/arch/x86/entry/syscalls/: syscall_64.tbl
syscall-pv/linux/include/linux/: syscalls.h
syscall-pv/linux/ipc/: sem.c
